# mycrt

./: CMakeLists.txt  build.sh  entry.c  main.c  main.cpp  mycrt.h  stdio.c  test.txt
Mycrt/: CMakeLists.txt  Makefile  atexit.c  cpptest  cpptest.cpp  crtbegin.cpp  crtend.cpp  ctors.cpp  entry.c  iostream.hpp  iterator.h  iterator.hpp  list.hpp  malloc.c  mycrt.h  new_delete.cpp  new_deletee.cpp  stdio.c  string.c  string.cpp  string.hpp  vector.hpp
